RESOLVED FIXED219961
[Cocoa] WebM format reader doesn't work with a url in a <source> element
https://bugs.webkit.org/show_bug.cgi?id=219961
Summary [Cocoa] WebM format reader doesn't work with a url in a <source> element
Eric Carlson
Reported 2020-12-16 14:07:20 PST
The WebM format reader doesn't work if the source url is in a <source> element
Attachments
Patch (21.10 KB, patch)
2020-12-16 17:21 PST, Eric Carlson
ews-feeder: commit-queue-
Patch (20.77 KB, patch)
2020-12-16 17:27 PST, Eric Carlson
ews-feeder: commit-queue-
Patch (21.20 KB, patch)
2020-12-16 17:35 PST, Eric Carlson
no flags
Patch (21.08 KB, patch)
2020-12-17 06:31 PST, Eric Carlson
no flags
Patch (21.25 KB, patch)
2020-12-17 08:04 PST, Eric Carlson
ews-feeder: commit-queue-
Patch for landing (21.45 KB, patch)
2020-12-17 08:41 PST, Eric Carlson
ews-feeder: commit-queue-
Patch for landing (21.97 KB, patch)
2020-12-17 09:03 PST, Eric Carlson
ews-feeder: commit-queue-
Patch for landing (22.01 KB, patch)
2020-12-17 09:28 PST, Eric Carlson
no flags
Final patch for landing (19.96 KB, patch)
2020-12-17 11:33 PST, Eric Carlson
no flags
Address post-review comments. (1.50 KB, patch)
2020-12-17 13:50 PST, Eric Carlson
no flags
Patch (37.17 KB, patch)
2021-01-05 16:23 PST, Eric Carlson
ews-feeder: commit-queue-
Patch (37.27 KB, patch)
2021-01-05 17:05 PST, Eric Carlson
ews-feeder: commit-queue-
Patch (37.26 KB, patch)
2021-01-05 17:13 PST, Eric Carlson
ews-feeder: commit-queue-
Patch (37.38 KB, patch)
2021-01-05 17:23 PST, Eric Carlson
ews-feeder: commit-queue-
Patch (37.49 KB, patch)
2021-01-05 17:33 PST, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2020-12-16 14:07:35 PST
Eric Carlson
Comment 2 2020-12-16 17:21:45 PST
Eric Carlson
Comment 3 2020-12-16 17:27:34 PST
Eric Carlson
Comment 4 2020-12-16 17:35:00 PST
Eric Carlson
Comment 5 2020-12-17 06:31:34 PST
Andy Estes
Comment 6 2020-12-17 07:21:13 PST
Comment on attachment 416417 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=416417&action=review > Source/WebCore/platform/graphics/cocoa/SourceBufferParserWebM.cpp:484 > + if (!os_variant_allows_internal_security_policies("com.apple.WebKit")) Since the value won't change at runtime, can you break this out into a helper function that caches the result of os_variant_allows_internal_security_policies() in a static bool? This was my mistake from earlier, but maybe you can fix it while you're here :)
Andy Estes
Comment 7 2020-12-17 07:24:46 PST
Comment on attachment 416417 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=416417&action=review > Source/WebCore/platform/graphics/cocoa/SourceBufferParserWebM.cpp:447 > +bool SourceBufferParserWebM::m_formatReaderEnabled = false; Since globals are initialized to 0 by default, no need for the ` = false` here.
Eric Carlson
Comment 8 2020-12-17 08:04:23 PST
Eric Carlson
Comment 9 2020-12-17 08:41:14 PST
Created attachment 416420 [details] Patch for landing
Eric Carlson
Comment 10 2020-12-17 09:03:31 PST
Created attachment 416425 [details] Patch for landing
Eric Carlson
Comment 11 2020-12-17 09:28:50 PST
Created attachment 416428 [details] Patch for landing
Eric Carlson
Comment 12 2020-12-17 11:33:48 PST
Created attachment 416443 [details] Final patch for landing
EWS
Comment 13 2020-12-17 12:14:50 PST
Committed r270939: <https://trac.webkit.org/changeset/270939> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416443 [details].
Darin Adler
Comment 14 2020-12-17 12:32:22 PST
Comment on attachment 416443 [details] Final patch for landing View in context: https://bugs.webkit.org/attachment.cgi?id=416443&action=review > Source/WebCore/platform/graphics/cocoa/SourceBufferParserWebM.cpp:483 > +#endif > + > +#if USE(APPLE_INTERNAL_SDK) This should be elif so we don’t compile multiple return statements.
Eric Carlson
Comment 15 2020-12-17 13:50:19 PST
Reopening to attach new patch.
Eric Carlson
Comment 16 2020-12-17 13:50:19 PST
Created attachment 416465 [details] Address post-review comments.
EWS
Comment 17 2020-12-17 15:15:12 PST
Committed r270952: <https://trac.webkit.org/changeset/270952> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416465 [details].
Darin Adler
Comment 18 2020-12-17 15:57:56 PST
Comment on attachment 416419 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=416419&action=review > Source/WebCore/platform/graphics/avfoundation/objc/AVAssetMIMETypeCache.mm:105 > + static auto cache = makeNeverDestroyed([this] { > + UNUSED_PARAM(this); Why do we capture "this"?
Eric Carlson
Comment 19 2020-12-17 16:17:03 PST
Comment on attachment 416419 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=416419&action=review >> Source/WebCore/platform/graphics/avfoundation/objc/AVAssetMIMETypeCache.mm:105 >> + UNUSED_PARAM(this); > > Why do we capture "this"? That was left over from a earlier version of the patch, but it was removed before landing.
Ryan Haddad
Comment 20 2020-12-21 12:49:26 PST
Reverted r270939 and r270952 for reason: Caused layout test timeouts on internal bots Committed r271038: <https://trac.webkit.org/changeset/271038>
Ryan Haddad
Comment 21 2020-12-21 12:49:28 PST
Reverted r270939 and r270952 for reason: Caused layout test timeouts on internal bots Committed r271038: <https://trac.webkit.org/changeset/271038>
Ryan Haddad
Comment 22 2020-12-21 13:03:46 PST
Details in rdar://72484508
Eric Carlson
Comment 23 2021-01-05 16:23:31 PST
Eric Carlson
Comment 24 2021-01-05 17:05:02 PST
Eric Carlson
Comment 25 2021-01-05 17:13:42 PST
Eric Carlson
Comment 26 2021-01-05 17:23:53 PST
Eric Carlson
Comment 27 2021-01-05 17:33:16 PST
EWS
Comment 28 2021-01-05 23:26:41 PST
Committed r271194: <https://trac.webkit.org/changeset/271194> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417062 [details].
Note You need to log in before you can comment on or make changes to this bug.