[Cocoa] WebM format reader doesn't work with a url in a <source> element https://bugs.webkit.org/show_bug.cgi?id=219961 <rdar://problem/72399014>

Reviewed by Andy Estes.

Source/WebCore:

Work around a bug that makes the format reader fail to load when the AVURLAssetOutOfBandMIMETypeKey
is included in the AVURLAsset options dictionary. Also include some cleanup:
- Move the code to check for WebM MIME types from MediaPlayerPrivateAVFoundationObjC
  to AVAssetMIMETypeCache.
- Don't use RuntimeEnabledFeatures in MediaPlayerPrivateAVFoundationObjC.
- Register the WebM format reader when creating an AVURLAsset for a WebM url instead
  of when checking the MIME type.
- Cleanup WebM "codecs" parameter parsing.

* platform/graphics/avfoundation/objc/AVAssetMIMETypeCache.h:
* platform/graphics/avfoundation/objc/AVAssetMIMETypeCache.mm:
(WebCore::AVAssetMIMETypeCache::canDecodeExtendedType):
(WebCore::AVAssetMIMETypeCache::staticContainerTypeList):
(WebCore::AVAssetMIMETypeCache::setWebMFormatReaderEnabled):
* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::registerFormatReaderIfNecessary):
(WebCore::shouldAdvertiseOutOfBandMIMEType):
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVAssetForURL):
(WebCore::MediaPlayerPrivateAVFoundationObjC::supportsTypeAndCodecs):
(WebCore::ensureFormatReaderIsRegistered): Deleted.
(WebCore::isFormatReaderAvailable): Deleted.
* platform/graphics/cocoa/SourceBufferParserWebM.cpp:
(WebCore::SourceBufferParserWebM::setWebMFormatReaderEnabled):
(WebCore::SourceBufferParserWebM::webmMIMETypes):
(WebCore::SourceBufferParserWebM::isWebMFormatReaderAvailable):
(WebCore::SourceBufferParserWebM::isContentTypeSupported):
* platform/graphics/cocoa/SourceBufferParserWebM.h:

Source/WebKit:

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences):
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):


Canonical link: https://commits.webkit.org/232562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270939 268f45cc-cd09-0410-ab3c-d52691b4dbfc