Source/WebCore/platform/graphics/avfoundation/objc/AVAssetMIMETypeCache.h
@@ -45,6 +45,8 @@ public:
     bool isUnsupportedContainerType(const String&) final;
 
     void addSupportedTypes(const Vector<String>&);
+    
+    void setWebMFormatReaderEnabled(bool);
 
 private:
     friend NeverDestroyed<AVAssetMIMETypeCache>;
