Source/WebCore/platform/graphics/cocoa/SourceBufferParserWebM.h
@@ -60,7 +60,10 @@ class WEBCORE_EXPORT SourceBufferParserWebM : public SourceBufferParser, private
 public:
     class StreamingVectorReader;
 
+    static bool isWebMFormatReaderAvailable();
+    static void setWebMFormatReaderEnabled(bool);
     static MediaPlayerEnums::SupportsType isContentTypeSupported(const ContentType&);
+    static const HashSet<String, ASCIICaseInsensitiveHash>& webmMIMETypes();
     static RefPtr<SourceBufferParserWebM> create(const ContentType&);
 
     SourceBufferParserWebM();
@@ -268,6 +271,8 @@ private:
 
     RefPtr<const WTF::Logger> m_logger;
     const void* m_logIdentifier { nullptr };
+    
+    static bool m_formatReaderEnabled;
 };
 
 }
